Ajustes das imagens, revisão css, função scroll

--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
   <script src="https://kit.fontawesome.com/1f747bf56f.js" crossorigin="anonymous"></script>
 </head>
 
-
-
 <body>
   <main>
 
     <header class="nav-desktop">
-
-
       <div class="container">
 
         <div class="nav-desktop__home">
@@ -52,7 +48,6 @@
         </div>
 
       </div>
-
     </header>
 
     <!--Section Banner-->
@@ -64,7 +59,7 @@
             <div class="banner-home__ul-box">
 
               <h2>
-                <img src="assets/imagens/h1-slide-img-1.png" alt="">
+                <img src="assets/imagens/galery-site/h1-slide-img-1.png" aria-hidden="true" alt="Mandala">
                 Yoga é uma filosofia e <br> um estilo de vida.
               </h2>
             </div>
@@ -75,7 +70,7 @@
             <div class="banner-home__ul-box">
 
               <h2>
-                <img src="assets/imagens/h1-slide-img-1.png" alt="">
+                <img src="assets/imagens/galery-site/h1-slide-img-1.png" aria-hidden="true" alt="Mandala">
                 Praticar Yoga é movimentar o corpo, <br>silenciar a mente e encontrar o equilibrio
               </h2>
             </div>
@@ -84,7 +79,7 @@
           <div id="banner-03" class="banner-home__ul-li">
             <div class="banner-home__ul-box">
               <h2>
-                <img src="assets/imagens/h1-slide-img-1.png" alt="">
+                <img src="assets/imagens/galery-site/h1-slide-img-1.png" aria-hidden="true" alt="Mandala">
                 <blockquote>Seja luz para <br>si mesmo.<br><cite>Buda</cite></blockquote>
 
               </h2>
@@ -106,24 +101,24 @@
           <div class="about-us__box-imgs">
 
             <a class="about-us__box-imgs__a" href="#">
-              <img src="assets/imagens/galery-home/svg1.png" alt="">
+              <img src="assets/imagens/galery-home/svg1.png" aria-hidden="true" alt="Icone Yoga">
             </a>
             <h2>Kriya Yoga</h2>
             <p class="about-us__imgs-paragraph">Associado ao equilíbrio energético através da prática de mantras em meditação</p>
           </div>
           <div class="about-us__box-imgs">
             <a class="about-us__box-imgs__a" href="#">
-              <img src="assets/imagens/galery-home/svg2.png" alt="">
+              <img src="assets/imagens/galery-home/svg2.png" aria-hidden="true" alt="Icone Yoga">
             </a>
             <h2>Hatha Yoga</h2>
             <p class="about-us__imgs-paragraph">Associado a prática de posturas e exercícios de respiração.</p>
           </div>
           <div class="about-us__box-imgs">
             <a class="about-us__box-imgs__a" href="#">
-              <img src="assets/imagens/galery-home/svg3.png" alt="">
+              <img src="assets/imagens/galery-home/svg3.png" aria-hidden="true" alt="Icone Yoga">
             </a>
-            <h2>Kundalini YOGA</h2>
-            <p class="about-us__imgs-paragraph">Associado a desobstrução do fluxo energético no corpo.</p>
+            <h2>YOGA Vinyasa</h2>
+            <p class="about-us__imgs-paragraph">Associado a práticas mais intensas e fluidas contendo posturas invertidas.</p>
           </div>
         </div>
       </div>
@@ -139,30 +134,30 @@
           <p>O Yoga é uma prática que tem como objetivo trabalhar o corpo e a mente de forma interligada, com exercícios que auxiliam no controle do estresse, ansiedade, dores no corpo e na coluna, além de melhorar o equilíbrio e promover a sensação de bem estar e a disposição, podendo ser praticada por homens, mulheres, crianças e idosos.</p>
         </div>
       </div>
-      <div class="galery-imgs">
+      <div class="galery-imgs" aria-hidden="true">
         <div class="galery-imgs__box">
-          <img src="assets/imagens/galery-home/galery1.jpg" alt="">
+          <img src="assets/imagens/galery-home/galery1.jpg" alt="Mulher praticando Yoga">
         </div>
         <div class="galery-imgs__box">
-          <img src="assets/imagens/galery-home/galery2.jpg" alt="">
+          <img src="assets/imagens/galery-home/galery2.jpg" alt="Livro colorido">
         </div>
         <div class="galery-imgs__box">
-          <img src="assets/imagens/galery-home/galery3jpg.jpg" alt="">
+          <img src="assets/imagens/galery-home/galery3jpg.jpg" alt="Casal praticando acro yoga">
         </div>
         <div class="galery-imgs__box">
-          <img src="assets/imagens/galery-home/galery-4.jpg" alt="">
+          <img src="assets/imagens/galery-home/galery-4.jpg" alt="Objetos de decoração, imagem Buda">
         </div>
         <div class="galery-imgs__box">
-          <img src="assets/imagens/galery-home/galery5.jpg" alt="">
+          <img src="assets/imagens/galery-home/galery5.jpg" alt="Flor de Lotus">
         </div>
         <div class="galery-imgs__box">
-          <img src="assets/imagens/galery-home/galery6.jpg" alt="">
+          <img src="assets/imagens/galery-home/galery6.jpg" alt="Mulheres praticando Yoga">
         </div>
         <div class="galery-imgs__box">
-          <img src="assets/imagens/galery-home/galery2.jpg" alt="">
+          <img src="assets/imagens/galery-home/galery-9.png" alt="Imagem Yoga">
         </div>
         <div class="galery-imgs__box">
-          <img src="assets/imagens/galery-home/galery8.jpg" alt="">
+          <img src="assets/imagens/galery-home/galery8.jpg" alt="Mandala">
         </div>
       </div>
 
@@ -200,15 +195,15 @@
 
             <div class="galery-hours__box-imgs__table">
               <p>Segunda - Sexta</p>
-              <span>09:00 ás 10:00</span>
+              <span>00:00 ás 00:00</span>
             </div>
             <div class="galery-hours__box-imgs__table">
               <p>Sabado</p>
-              <span>09:00 ás 10:00</span>
+              <span>00:00 ás 00:00</span>
             </div>
             <div class="galery-hours__box-imgs__table">
               <p>Segunda</p>
-              <span>09:00 ás 10:00</span>
+              <span>00:00 ás 00:00</span>
             </div>
           </div>
 
@@ -273,11 +268,11 @@
         <div class="banner-acro__box">
 
           <div class="banner-acro__img">
-            <img src="assets/imagens/h1-img-4.png" alt="">
+            <img src="assets/imagens/galery-site/h1-img-4.png" alt="Imagem mulher praticando Yoga">
           </div>
           <div class="banner-acro__text">
             <h3>Yoga</h3>
-            <p>É uma prática que envolve o bem-estar a todos os níveis: mental, físico, emocional e espiritual. Esta prática consiste na união do corpo e da mente ao que está à nossa volta. O criador do yoga, Shiva, o Deus da criação e da consciência, gerou de forma instintiva movimentos complexos, mas de intensa beleza.</p>
+            <p>É uma prática que envolve o bem-estar a todos os níveis: mental, físico, emocional e espiritual. Esta prática consiste na união do corpo e da mente ao que está à nossa volta. Yoga é uma prática milenar, porém só chegou ao ocidente há pouco tempo, trazendo movimentos fáceis a complexos mas de intensa beleza.</p>
           </div>
         </div>
       </div>
@@ -297,21 +292,21 @@
           <div class="blog-box__imgs">
 
             <div class="blog-box__imgs-img">
-              <img width="400" src="assets/imagens/banner/img1-min.jpeg" alt="" class="blog-box__imgs-image">
+              <img width="400" src="assets/imagens/banner/banner-2-min.jpg" aria-hidden="true" alt="Imagem blog" class="blog-box__imgs-image">
               <h3 class="blog-box__imgs-h3"><a href="">Yoga</a></h3>
               <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate cursus a sit amet.</p>
               <a class="blog-box__imgs-span" href="#"> <span> Veja mais</span></a>
             </div>
 
             <div class="blog-box__imgs-img">
-              <img width="400" src="assets/imagens/banner/img1-min.jpeg" alt="" class="blog-box__imgs-image">
+              <img width="400" src="assets/imagens/banner/banner-3-min.jpg" aria-hidden="true" alt="Imagem blog" class="blog-box__imgs-image">
               <h3 class="blog-box__imgs-h3"><a href="">Yoga</a></h3>
               <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate cursus a sit amet.</p>
               <a class="blog-box__imgs-span" href="#"> <span> Veja mais</span></a>
             </div>
 
             <div class="blog-box__imgs-img">
-              <img width="400" src="assets/imagens/banner/img1-min.jpeg" alt="" class="blog-box__imgs-image">
+              <img width="400" src="assets/imagens/banner/banner-01-min.jpg" aria-hidden="true" alt="Imagem blog" class="blog-box__imgs-image">
               <h3 class="blog-box__imgs-h3"><a href="">Yoga</a></h3>
               <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate cursus a sit amet.</p>
               <a class="blog-box__imgs-span" href="#"> <span> Veja mais</span></a>
@@ -333,7 +328,8 @@
         <div class="owl-carousel owl-theme">
 
           <div class="item carrousel-box__img">
-            <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
+            <img width="100px" src="assets/imagens/galery-site/testimonials-quote.png" aria-hidden="true" alt="Imagem quote">
+            <p>
             <blockquote>O segredo da saúde mental e corporal está em não se lamentar pelo passado, não se preocupar com o futuro, nem se adiantar aos problemas, mas viver sabia e seriamente o presente.</blockquote>
             </p>
             <cite>Buda</cite>
@@ -344,7 +340,7 @@
           <div class="item carrousel-box__img">
             <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
             <p>
-            <blockquote>Quem olha para fora, sonha. <br> Quem olha para dentro, acorda.</blockquote>
+            <blockquote>Quem olha para fora, sonha. Quem olha para dentro, acorda.</blockquote>
             </p>
             <cite>Carl Gustav Jung</cite>
           </div>
@@ -352,17 +348,18 @@
 
           <div class="item carrousel-box__img">
             <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
-            <blockquote>O segredo da saúde mental e corporal está em não se lamentar pelo passado, não se preocupar com o futuro, nem se adiantar aos problemas, mas viver sabia e seriamente o presente.</blockquote>
+            <p>
+            <blockquote>Yoga é a arte de moderar os sentimentos nas ações e buscar a felicidade dos sentidos pela concentração correta.</blockquote>
             </p>
-            <cite>Buda</cite>
+            <cite>Bruno Mahahrdaya</cite>
           </div>
 
           <div class="item carrousel-box__img">
             <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
             <p>
-            <blockquote>O segredo da saúde mental e corporal está em não se lamentar pelo passado, não se preocupar com o futuro, nem se adiantar aos problemas, mas viver sabia e seriamente o presente.</blockquote>
+            <blockquote>Yoga é a viagem do ser, através do ser e para o ser.</blockquote>
             </p>
-            <cite>Buda</cite>
+            <cite>Bhagavad Gita</cite>
           </div>
 
 
@@ -372,9 +369,7 @@
       </div>
     </section>
 
-
     <!--Contact-us-->
-
     <section class="contact" id="contact-id">
       <div class="container">
 
@@ -401,11 +396,15 @@
           <div class="contact-box__form-text">
             <div class="contact-box__form-contact">
               <h3><i class="fa fa-whatsapp"></i> Whatsapp:</h3>
-              <span>(16) 992010876 </span>
+              <a href="https://api.whatsapp.com/send?phone=5516992010876&text=Karina%20Yoga%20e%20Acro%20Yoga" target="_blank">
+                <span>(16) 99201-0876 </span>
+              </a>
             </div>
             <div class="contact-box__form-contact">
               <h3><i class="fa fa-at"></i> E-mail</h3>
-              <span>karina@yoga.com.br</span>
+              <a href="emailto:">
+                <span>karina@yoga.com.br</span>
+              </a>
             </div>
           </div>
 
@@ -414,14 +413,12 @@
       </div>
     </section>
 
-
     <!--footer-->
     <footer>
       <div class="container">
 
         <div class="footer-networks">
           <div class="footer-networks__contact">
-
             <a href="https://api.whatsapp.com/send?phone=5516992010876&text=Karina%20Yoga%20e%20Acro%20Yoga" target="_blank">
               <h3>Fale comigo pelo Whatsapp</h3>
             </a>
@@ -449,13 +446,32 @@
           <div class="footer-instagram">
 
             <h3>Instagram</h3>
+
             <div class="footer-instagram__photos">
-              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/h1-img-4.png" alt=""></a>
-              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/h1-img-4.png" alt=""></a>
-              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/h1-img-4.png" alt=""></a>
-              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/h1-img-4.png" alt=""></a>
-              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/h1-img-4.png" alt=""></a>
-              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/h1-img-4.png" alt=""></a>
+
+              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/galery-home/galery-4.jpg" alt="">
+              </a>
+
+              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/galery-home/galery-4.jpg" alt="">
+              </a>
+
+              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/galery-home/galery-4.jpg" alt="">
+              </a>
+
+              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/galery-home/galery-4.jpg" alt="">
+              </a>
+
+              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/galery-home/galery-4.jpg" alt="">
+              </a>
+
+              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/galery-home/galery-4.jpg" alt="">
+              </a>
+
+              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/galery-home/galery-4.jpg" alt="">
+              </a>
+
+              <a class="footer-instagram__photos-img" href=""><img width="100px" src="assets/imagens/galery-home/galery-4.jpg" alt="">
+              </a>
 
             </div>
 
@@ -494,7 +510,7 @@
 
       </div>
 
-      <a id="footer-back-to-top" href="#" class="on">
+      <a id="footer-back-to-top" href="#">
         <span class="mkd-icon-stack">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
             <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
@@ -506,6 +522,8 @@
   </main>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="assets/js/scroll.js"></script>
+  <script src="assets/js/scroll-to-top.js"></script>
   <script src="assets/js/slick.js"></script>
   <script src="assets/js/owl/owl.carousel.min.js"></script>
   <script src="assets/js/owl/owl-carrousel.js"></script>
