Contruçao page Blog page unica, ajustes nas imagesn e mobile

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karina Azevedo - Yoga&Acro</title>
-
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="assets/styles/css/owl.carousel.min.css">
   <link rel="stylesheet" href="assets/styles/css/owl.theme.default.min.css">
   <link rel="stylesheet" href="assets/styles/css/normalize.css">
   <link rel="stylesheet" href="assets/styles/css/reset.css">
-  <link rel="stylesheet" href="assets/styles/css/style.css">
+  <link rel="stylesheet" href="assets/styles/css/blog.css">
+  <link rel="stylesheet" href="assets/styles/css/home.css">
   <script src="https://kit.fontawesome.com/1f747bf56f.js" crossorigin="anonymous"></script>
 </head>
 
@@ -92,7 +92,6 @@
 
 
     </section>
-    <!--End Banner-->
 
     <!--Section about Us-->
     <section class="about-us" id="about-id">
@@ -124,8 +123,8 @@
       </div>
 
     </section>
-    <!--End about Us-->
 
+    <!--Section galery - History-->
     <section class="galery" id="galery-id">
       <div class="container">
 
@@ -279,7 +278,6 @@
     </section>
 
     <!--Blog-->
-
     <section class="blog" id="blog-id">
       <div class="container">
         <div class="blog-box">
@@ -335,19 +333,16 @@
             <cite>Buda</cite>
           </div>
 
-
-
           <div class="item carrousel-box__img">
-            <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
+            <img width="100px" src="assets/imagens/galery-site/testimonials-quote.png" aria-hidden="true" alt="Imagem quote">
             <p>
             <blockquote>Quem olha para fora, sonha. Quem olha para dentro, acorda.</blockquote>
             </p>
             <cite>Carl Gustav Jung</cite>
           </div>
 
-
           <div class="item carrousel-box__img">
-            <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
+            <img width="100px" src="assets/imagens/galery-site/testimonials-quote.png" aria-hidden="true" alt="Imagem quote">
             <p>
             <blockquote>Yoga é a arte de moderar os sentimentos nas ações e buscar a felicidade dos sentidos pela concentração correta.</blockquote>
             </p>
@@ -355,17 +350,14 @@
           </div>
 
           <div class="item carrousel-box__img">
-            <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
+            <img width="100px" src="assets/imagens/galery-site/testimonials-quote.png" aria-hidden="true" alt="Imagem quote">
             <p>
             <blockquote>Yoga é a viagem do ser, através do ser e para o ser.</blockquote>
             </p>
             <cite>Bhagavad Gita</cite>
           </div>
 
-
         </div>
-
-
       </div>
     </section>
 
