Revert "feat: Implementado recursos de acessibilidade"

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <div class="nav-desktop__home">
 
           <div class="nav-desktop__logo">
-            <h1> <img src="assets/imagens/banner/logo1.svg" alt="">
-              <span class="hide-screen">Karina Azevedo. Yoga e Acro</span>
+            <h1> <img src="assets/imagens/banner/logo1.svg" alt=""> <br>
             </h1>
           </div>
 
@@ -81,8 +80,7 @@
             <div class="banner-home__ul-box">
               <h2>
                 <img src="assets/imagens/galery-site/h1-slide-img-1.png" aria-hidden="true" alt="Mandala">
-                <q>Seja luz para <br>si mesmo.<br></q>
-                <cite>Buda</cite>
+                <blockquote>Seja luz para <br>si mesmo.<br><cite>Buda</cite></blockquote>
 
               </h2>
 
@@ -133,8 +131,7 @@
 
         <div class="galery-box__text">
           <h3>Conheça um pouco da minha história</h3>
-          <p>O Yoga é uma prática que tem como objetivo trabalhar o corpo e a mente de forma interligada, com exercícios que auxiliam no controle do estresse, ansiedade, dores no corpo e na coluna,
-            além de melhorar o equilíbrio e promover a sensação de bem estar e a disposição, podendo ser praticada por homens, mulheres, crianças e idosos.</p>
+          <p>O Yoga é uma prática que tem como objetivo trabalhar o corpo e a mente de forma interligada, com exercícios que auxiliam no controle do estresse, ansiedade, dores no corpo e na coluna, além de melhorar o equilíbrio e promover a sensação de bem estar e a disposição, podendo ser praticada por homens, mulheres, crianças e idosos.</p>
         </div>
       </div>
       <div class="galery-imgs" aria-hidden="true">
@@ -222,16 +219,15 @@
         <div class="banner-yoga__box-box">
 
           <div class="banner-yoga__box" id="yoga-text">
-            <span>Acro Yoga</span>
-            <p>Acroyoga é uma prática onde se mescla a alegria e dinamismo da acrobacia, posturas e calma do yoga, cura e carinho da massagem Tailandesa, cuidando sempre para que a prática seja segura
-              e divertida. Ela é dividida como acrobática ou terapêutica e ambas, precisam de muita confiança e entrega de todos os participantes.</p>
+            <h3>Acro Yoga</h3>
+            <p>Acroyoga é uma prática onde se mescla a alegria e dinamismo da acrobacia, posturas e calma do yoga, cura e carinho da massagem Tailandesa, cuidando sempre para que a prática seja segura e divertida. Ela é dividida como acrobática ou terapêutica e ambas, precisam de muita confiança e entrega de todos os participantes.</p>
           </div>
 
           <div class="banner-yoga__box" id="banner-yoga__table">
 
             <div class="banner-yoga__table-box">
               <div class="banner-yoga__table-title">
-                <span>Autoestima</span>
+                <h3>Autoestima</h3>
                 <span>95%</span>
               </div>
               <div class="banner-yoga__table-box__div" id="self"></div>
@@ -239,7 +235,7 @@
 
             <div class="banner-yoga__table-box">
               <div class="banner-yoga__table-title">
-                <span>Metabolismo</span>
+                <h3>Metabolismo</h3>
                 <span>85%</span>
               </div>
               <div class="banner-yoga__table-box__div" id="metabolism"></div>
@@ -247,7 +243,7 @@
 
             <div class="banner-yoga__table-box">
               <div class="banner-yoga__table-title">
-                <span>Flexibilidade</span>
+                <h3>Flexibilidade</h3>
                 <span>80%</span>
               </div>
               <div class="banner-yoga__table-box__div" id="flexibility"></div>
@@ -255,7 +251,7 @@
 
             <div class="banner-yoga__table-box">
               <div class="banner-yoga__table-title">
-                <span>Tonifica os Musculos</span>
+                <h3>Tonifica os Musculos</h3>
                 <span>50%</span>
               </div>
               <div class="banner-yoga__table-box__div" id="muscles"></div>
@@ -272,12 +268,11 @@
         <div class="banner-acro__box">
 
           <div class="banner-acro__img">
-            <img src="assets/imagens/galery-site/h1-img-4.png" alt="Mulher praticando Yoga">
+            <img src="assets/imagens/galery-site/h1-img-4.png" alt="Imagem mulher praticando Yoga">
           </div>
           <div class="banner-acro__text">
             <h3>Yoga</h3>
-            <p>É uma prática que envolve o bem-estar a todos os níveis: mental, físico, emocional e espiritual. Esta prática consiste na união do corpo e da mente ao que está à nossa volta. Yoga é uma
-              prática milenar, porém só chegou ao ocidente há pouco tempo, trazendo movimentos fáceis a complexos mas de intensa beleza.</p>
+            <p>É uma prática que envolve o bem-estar a todos os níveis: mental, físico, emocional e espiritual. Esta prática consiste na união do corpo e da mente ao que está à nossa volta. Yoga é uma prática milenar, porém só chegou ao ocidente há pouco tempo, trazendo movimentos fáceis a complexos mas de intensa beleza.</p>
           </div>
         </div>
       </div>
@@ -299,24 +294,21 @@
             <div class="blog-box__imgs-img">
               <img width="400" src="assets/imagens/banner/banner-2-min.jpg" aria-hidden="true" alt="Imagem blog" class="blog-box__imgs-image">
               <h3 class="blog-box__imgs-h3"><a href="">Yoga</a></h3>
-              <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate
-                cursus a sit amet.</p>
+              <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate cursus a sit amet.</p>
               <a class="blog-box__imgs-span" href="#"> <span> Veja mais</span></a>
             </div>
 
             <div class="blog-box__imgs-img">
               <img width="400" src="assets/imagens/banner/banner-3-min.jpg" aria-hidden="true" alt="Imagem blog" class="blog-box__imgs-image">
               <h3 class="blog-box__imgs-h3"><a href="">Yoga</a></h3>
-              <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate
-                cursus a sit amet.</p>
+              <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate cursus a sit amet.</p>
               <a class="blog-box__imgs-span" href="#"> <span> Veja mais</span></a>
             </div>
 
             <div class="blog-box__imgs-img">
               <img width="400" src="assets/imagens/banner/banner-01-min.jpg" aria-hidden="true" alt="Imagem blog" class="blog-box__imgs-image">
               <h3 class="blog-box__imgs-h3"><a href="">Yoga</a></h3>
-              <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate
-                cursus a sit amet.</p>
+              <p class="blog-box__imgs-p">Lorem ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem auci elit consequat ipsutissem niuis sed odio sit amet nibh vulputate cursus a sit amet.</p>
               <a class="blog-box__imgs-span" href="#"> <span> Veja mais</span></a>
 
             </div>
@@ -338,8 +330,7 @@
           <div class="item carrousel-box__img">
             <img width="100px" src="assets/imagens/galery-site/testimonials-quote.png" aria-hidden="true" alt="Imagem quote">
             <p>
-              <q>O segredo da saúde mental e corporal está em não se lamentar pelo passado, não se preocupar com o futuro, nem se adiantar aos problemas, mas viver sabia e seriamente o
-                presente.</q>
+            <blockquote>O segredo da saúde mental e corporal está em não se lamentar pelo passado, não se preocupar com o futuro, nem se adiantar aos problemas, mas viver sabia e seriamente o presente.</blockquote>
             </p>
             <cite>Buda</cite>
           </div>
@@ -347,26 +338,26 @@
 
 
           <div class="item carrousel-box__img">
-            <img width="100px" src="assets/imagens/galery-site/testimonials-quote.png" alt="">
+            <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
             <p>
-              <q>Quem olha para fora, sonha. Quem olha para dentro, acorda.</q>
+            <blockquote>Quem olha para fora, sonha. Quem olha para dentro, acorda.</blockquote>
             </p>
             <cite>Carl Gustav Jung</cite>
           </div>
 
 
           <div class="item carrousel-box__img">
-            <img width="100px" src="assets/imagens/galery-site/testimonials-quote.png" alt="">
+            <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
             <p>
-              <q>Yoga é a arte de moderar os sentimentos nas ações e buscar a felicidade dos sentidos pela concentração correta.</q>
+            <blockquote>Yoga é a arte de moderar os sentimentos nas ações e buscar a felicidade dos sentidos pela concentração correta.</blockquote>
             </p>
             <cite>Bruno Mahahrdaya</cite>
           </div>
 
           <div class="item carrousel-box__img">
-            <img width="100px" src="assets/imagens/galery-site/testimonials-quote.png" alt="">
+            <img width="100px" src="assets/imagens/testimonials-quote.png" alt="">
             <p>
-              <q>Yoga é a viagem do ser, através do ser e para o ser.</q>
+            <blockquote>Yoga é a viagem do ser, através do ser e para o ser.</blockquote>
             </p>
             <cite>Bhagavad Gita</cite>
           </div>
@@ -434,7 +425,7 @@
           </div>
 
           <div class="footer-networks__post blog">
-            <h3>Blog - Últimos Posts</h3>
+            <h3>Blog - últimos Posts</h3>
             <div class="footer-network__post-box">
               <a class="footer-network__post-a" href="">
                 <h3 class="footer-network__post-h3">Yoga</h3>
@@ -523,8 +514,7 @@
         <span class="mkd-icon-stack">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
             <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-            <path
-              d="M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z" />
+            <path d="M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z" />
           </svg></span>
       </a>
     </footer>
